--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Node App Realm Testbed",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "CLEAN_REALM=true node index.js",
+    "client": "node clientTest.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Paolo",
