--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "A Node App Realm Testbed",
   "main": "index.js",
   "scripts": {
-    "start": "CLEAN_REALM=true node index.js",
+    "cleanStart": "CLEAN_REALM=true node index.js",
+    "start": "node index.js",
+    "shara": "npx tsc && node build/index.js",
     "client": "node clientTest.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Paolo",
   "license": "MIT",
   "dependencies": {
-    "realm": "^10.0.1"
+    "realm": "^10.1.2"
   }
 }
