--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "A Node App Realm Testbed",
   "main": "index.js",
   "scripts": {
-    "cleanStart": "CLEAN_REALM=true node index.js",
-    "start": "node index.js",
-    "shara": "npx tsc && node build/index.js",
+    "cleanPartition": "CLEAN_REALM=true node index.js",
+    "partition": "node index.js",
+    "cleanFlexible": "CLEAN_REALM=true node flexible.js",
+    "flexible": "node flexible.js",
     "client": "node clientTest.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Paolo",
   "license": "MIT",
   "dependencies": {
-    "realm": "^10.1.2"
+    "realm": "^10.12.0"
   }
 }
